--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/andrew-neel-cckf4TsHAuw-unsplash.jpg" alt="" /></span>
+								<span class="image main"><img src="images/6.jpg" alt="" /></span>
 								<h3 class="major">Bienvenido</h3>
 								
 								<p>¡Hola, te doy la bienvenida a mi página web! </p>
