--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 								<h3>1.Diseño y despliegue de Arquitectura Big Data Batch - MS Azure </h3>
 								<span class="image main"><img src="images/10.jpg" alt="" /></span>
-								<p> Investigación, diseño y desarrollo de Plataforma Big Data Analytics, la cual permite 
+								<p> Investigación, diseño e implementación de Plataforma Big Data Analytics, la cual permite 
 									el tratamiento de datos a gran escala con el fin de propiciar 
 									el descubrimiento de información, la gestión y analítica avanzada de datos.</p>
 
@@ -265,7 +265,7 @@
 								
 								<h3>2. Mejoras de Click & Vote - Votación electronica con tecnología Blokchain</h3>
 								<span class="image main"><img src="images/12.jpg" alt="" /></span>
-								<p> Administración y mejoras de Plataforma Click & Vote, la cual busca facilitar el proceso de votación
+								<p> Administración, actualización y despliegue de mejoras de Plataforma Click & Vote, la cual busca facilitar el proceso de votación
 									remota en juntas de accionistas, a través de una herramienta segura y
 									privada bajo la tecnología Blockchain, la que garantiza mayor
 									seguridad, confianza y trazabilidad de la información.
@@ -303,19 +303,17 @@
 
 								<h3> Otros proyectos </h3>
 									<ul>
-										<li> Re diseño de Sistema administrativo de Operaciones a Plazo.</li>
+										<li> Implementación de Rediseño de Sistema administrativo de Operaciones a Plazo.</li>
 										<li> Diseño y desarrollo sistema de administración de usuarios para Terminales de Negociación. </li>
-										<li> Sistema de facturación de Operaciones. </li>
-										<li> Bases de datos de Cuotas de Fondos. </li>
-										<li> Calculadora de garantía y límites de concentración para Renta Variable y Renta Fija.</li>
+										<li> Implementación y actualización de Sistema de facturación de Operaciones. </li>
+										<li> Implementación de nuevo servicios de datos de Cuotas de Fondos. </li>
+										<li> Implementación de Calculadora de garantía y límites de concentración para Renta Variable y Renta Fija.</li>
 										<li> Automatización de detección de fraude – CCI. </li>
 										<li> Automatización de detección de fraude – Liga de inversionistas. </li>
-										<li> Mejoras de rendimiento - SantiagoX Landing. </li>
-										<li> Automatización cobros – SantiagoX Landing. </li>
-										<li> Automatización Informe de Performance de Bolsa de Valores LATAM. </li>
-										<li> Inv. Automatización control Market Maker. </li>
-										<li> Inv. Subasta de Cierre. </li>
-										<li> Inv. Precio de Cierre mercado extranjeros – MVE.</li>
+										<li> Actualización y mejoras de rendimiento - SantiagoX Lending. </li>
+										<li> Automatización cobros – SantiagoX Lending. </li>
+										<li> Generación Informe de Performance de Bolsa de Valores LATAM. </li>
+									
 										<li> Entre otros. </li></p>
 									</ul>	
 
