--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 								
 								<h3 class="major"><a href="https://banco.bice.cl/">Banco BICE</a>: 2019 </h3>
 								<span class="image main"><img src="images/banco_bice_logo_color.svg" alt="" /></span>
-								<p> Desde marzo a septiembre, 2019 me desempeñé como <b>Ingenierio de Inteligencia de Negocios bajo modalidad de Memorista de Titulo</b> en el 
+								<p> Desde marzo a septiembre, 2019 me desempeñé como <b>Analista de Inteligencia de Negocios</b> bajo modalidad de Memorista de Titulo en el 
 									Departamento de Inteligencia de Negocios.</p>
 									<p> Implementé y desarrollé modelos predictivos y descriptivos a través de herramientas de minería de datos y Machine Learning (Python), para cartera de colocaciones
 									de productos de consumo asi como Dashboards para visualización de los mismos (Qliksense).</p>
@@ -224,15 +224,18 @@
 
 								<h3 class="major">Lenguajes de programación y softwares </h3>
 								<ul>
-									<li> Python (IDE Jupyter y Spyder) – Nivel intermedio/Avanzado.</li>
-									<li> SQL (Oracle SQL Developer / SQL Server Management Studio) – Nivel intermedio/Avanzado. </li>
-									<li> Qlik Sense – Nivel intermedio. </li>
-									<li> STATGRAPHICS – Nivel intermedio. </li>
-									<li> Bloomberg – Nivel intermedio.</li>
-									<li> JIRA – Nivel intermedio. </li>
-									<li> Qlik-View – Nivel básico. </li>
-									<li> Power BI – Nivel básico. </li>
-									<li> R – Nivel básico. </p>
+									<li> Python (IDE Jupyter y Spyder). </li>
+									<li> SQL (Oracle SQL Developer / Microsoft SQL Server). </li>
+									<li> Qlik Sense.  </li>
+									<li> STATGRAPHICS. </li>
+									<li> Bloomberg. </li>
+									<li> Qlik-View. </li>
+									<li> Power BI. </li>
+									<li> HTML + CSS.</li>
+									<li> Tableau.</li>
+									<li> LateX. </li>
+									<li> JIRA. </li>
+									<li> R.</li>
 								</ul>
 
 
