--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<article id="Experiencia">
 
 								<h2 class="major">Experiencia</h2>
-								<span class="image main"><img src="images/mario-gogh-VBLHICVh-lI-unsplash.jpg" alt="" /></span>
+								<span class="image main"><img src="images/thumbnail_C3.jpg" alt="" /></span>
 								
 								<h3 class="major"><a href="https://www.bolsadesantiago.com/">Bolsa de Santiago</a> : 2019 - actual </h3>
 								
