--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 								<h3><br> Innovation and technology lead - Product Owner</br></h3></h3>
 								<p></p> 
 								<p><b>Ingeniero Civil Industrial apasionado por la tecnología, analítica avanzada, finanzas e inversiones.</b></p> 												
-								<p><b> Actualmente trabajando como Products & Digital Innovation Lead Manager en la <a href="https://www.bolsadesantiago.com/">Bolsa de Santiago.</b></a> 
+								<p><b> Actualmente trabajando como Products & Digital Innovation Lead Manager en la <a href="https://www.bolsadesantiago.com/">Bolsa de Santiago.</b></p> 	
+								<p><b> <iframe width="560" height="315" src="https://www.youtube.com/embed/UpRXG916Pv0?start=3124" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></b></a> 
+									
+
+									
 							</div>
 						</div>
 						<nav>
@@ -185,7 +189,7 @@
 									 <p></p> 
 									<p> Puedes visualizar y descargar mi CV seleccionando:</b></a> 
 										<ul class="actions">
-											<li><a href="https://drive.google.com/file/d/1paVXXcf2V3cGHPNZ8Ye5FGWomZUqv6ZS/view?usp=sharing" class="button"><b>Curriculum Vitae</b></a></li>
+											<li><a href="https://drive.google.com/file/d/1uoLpwr9_4lERBQwx_F91MToTMqO8CN6A/view?usp=sharing" class="button"><b>Curriculum Vitae</b></a></li>
 										</ul>
 								<h3 class="major">Estudios</h3>
 								<ul>
