--- a/index.html
+++ b/index.html
@@ -228,18 +228,17 @@
 
 								<h3 class="major">Lenguajes de programación y softwares </h3>
 								<ul>
-									<li> Python (IDE Jupyter y Spyder). </li>
-									<li> SQL (Oracle SQL Developer / Microsoft SQL Server). </li>
-									<li> Qlik Sense.  </li>
-									<li> STATGRAPHICS. </li>
-									<li> Bloomberg. </li>
-									<li> Qlik-View. </li>
-									<li> Power BI. </li>
-									<li> HTML + CSS.</li>
-									<li> Tableau.</li>
-									<li> LateX. </li>
-									<li> JIRA. </li>
-									<li> R.</li>
+									<li> Apache Spark - Azure Synapse Analytics - Cloud Azure - Python (Jupyter) -  SQL (Oracle / Microsoft SQL Server) 
+									- Qlik Sense
+									- STATGRAPHICS 
+									- Bloomberg
+									- Qlik-View 
+									- Power BI 
+									- HTML + CSS
+									- Tableau
+									- LateX
+									- JIRA 
+									- R</li>
 								</ul>
 
 
