--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 								<span class="image main"><img src="images/btg3.jpg" alt="" /></span>
 								
 								<p> Desde marzo 2023 me desempeño como <b>Associate Director of Information Technology / Director Asociado de Tecnología de la Información </b>. 
-									En este rol estoy encargado de liderar proyectos tecnológicos de alto impacto, 
-									procesos de transformación digital y automatización de procesos para el área de Sales & Trading de la Corredora de Bolsa.</p>
+									En este rol estoy encargado de los proyectos tecnológicos de alto impacto, 
+									procesos de transformación digital y automatización de procesos para el área de Sales & Trading.</p>
 								</p>
 										</ul>
 
