--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<h3><br> Innovation and technology lead </br></h3><h3>
 								<p></p> 
 								<p><b>Ingeniero Civil Industrial apasionado por la tecnología, analítica avanzada, finanzas e inversiones.</b></p> 												
-								<p><b> Actualmente trabajando como Director Asociado de Tecnología en <a href="https://btgpactual.cl//">BTG Pactual</b></p> 	
+								<p><b> Actualmente trabajando como Director Asociado de Tecnología en <a href="https://btgpactual.cl//">BTG Pactual.</b></p> 	
 								<p><b> </b>
 								
 							
@@ -196,7 +196,7 @@
 
 								<h3 class="major"><a href="https://www.bcentral.cl/inicio">Banco Central de Chile</a>: 2019</h3>
 								<span class="image main"><img src="images/abc.jpg" alt="" /></span>
-								<p> Desde enero hasta marzo de 2019, me desempeñé como <b>Practicante</b> en el Departamento de Investigación y Desarrollo de
+								<p> Desde enero hasta marzo de 2019, realica la <b>Práctica Profesional</b> en el Departamento de Investigación y Desarrollo de
 									Circulantes. Desarrollé e implementé métodos de validación estadística de procesos. </p>
 								<p>	<b>Softwares y lenguaje de programación utilizados</b>: herramientas de Microsoft Office y macros.</p>
 
