--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 								<h3 class="major"><a href="https://www.bcentral.cl/inicio">Banco Central de Chile</a>: 2019</h3>
 								<span class="image main"><img src="images/abc.jpg" alt="" /></span>
-								<p> Desde enero hasta marzo de 2019, realica la <b>Práctica Profesional</b> en el Departamento de Investigación y Desarrollo de
+								<p> Desde enero hasta marzo de 2019, realice una <b>Práctica Profesional</b> en el Departamento de Investigación y Desarrollo de
 									Circulantes. Desarrollé e implementé métodos de validación estadística de procesos. </p>
 								<p>	<b>Softwares y lenguaje de programación utilizados</b>: herramientas de Microsoft Office y macros.</p>
 
