--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 								<ul>
 									<li> Ciencia de Datos.</li>
 									<li> Matemática y estadística.</li>
+									<li> Finanzas e inversiones.</li>
 									<li> Transformación e innovación digital.</li>
 									<li> Algoritmos de Machine Learning e Inteligencia Artificial.  </li>
 									<li> Tecnología Cloud: SaaS, PaaS, IaaS y CaaS. </li>
@@ -230,7 +231,7 @@
 									 <p></p> 
 									<p> Puedes visualizar y descargar mi CV seleccionando:</b></a> 
 										<ul class="actions">
-											<li><a href="https://drive.google.com/file/d/1uoLpwr9_4lERBQwx_F91MToTMqO8CN6A/view?usp=sharing" class="button"><b>Curriculum Vitae</b></a></li>
+											<li><a href="https://drive.google.com/file/d/1PRSE-k9hXYwmVd4mxr-u2EE7hPwx_Ndz/view?usp=sharing" class="button"><b>Curriculum Vitae</b></a></li>
 										</ul>
 								<h3 class="major">Estudios</h3>
 								<ul>
@@ -268,8 +269,7 @@
 								</ul>
 
 
-								<h3 class="major"> Herramientas 
-								y Lenguajes de programación</h3>
+								<h3 class="major">Lenguajes/Softwares</h3>
 								<ul>
 									<li> Apache Spark - Azure Synapse Analytics - Cloud Azure - Python (Jupyter) -  SQL (Oracle / Microsoft SQL Server) 
 									- Qlik Sense
