--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 								<h2 class="major">Acerca de mi</h2>
 								<span class="image main"><img src="images/Carlos.png" alt="" /></span>
 								<p>Ingeniero Civil Industrial titulado con distinción máxima de la Universidad de Concepción, 
-									con experiencia laboral como Product Manager y Product Owner (certificado PO CertiProf) 
+									con experiencia laboral como Lead Manager de Innovación Digital y Product Owner Senior (certificado PO CertiProf) 
 									en Mercados Bursátiles y Financieros, enfocado en proyectos tecnológicos
 									 y de innovación de alto impacto. </p>
 									 
