--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
 									 y de innovación de alto impacto. </p>
 									 
 									 <p>Con variados cursos en análisis financiero, 
-									 programación y actualmente cursando Magíster de Tecnología de Información y Gestión en Pontificia Universidad Católica, 
-									 además, de certificación profesional en Data Science de IBM. </p>
+									 programación y actualmente cursando Magíster de Tecnología de Información y Gestión en Pontificia Universidad Católica de Chile.</p>
 									 
 									 Profesional orientado a participar de proyectos con desarrollos tecnológicos desafiantes 
 									 y analítica avanzada enfocada en datos, cumplimiento de objetivos y resolución de problemas.</p>
@@ -275,11 +274,11 @@
 									<li> <b>2022</b>: Data Science Orientation - IBM. </li>
 									<li> <b>2022</b>: Ingles para el ámbito laboral Avanzado C1 - ENOVUS. </li>
 									<li> <b>2021</b>: Machine Learning & Artificial Intelligence - RiskMathics Financial Institute. </li>
-									<li> <b>2020</b>: Análisis Fundamental – Bolsa de Comercio de Santiago y Universidad Adolfo Ibáñez.</li>
-									<li> <b>2020</b>: Análisis Financiero – Bolsa de Comercio de Santiago y Universidad Adolfo Ibáñez. </li>
-									<li> <b>2020</b>: Análisis Técnico – Bolsa de Comercio de Santiago y Universidad Adolfo Ibáñez.</li>
+									<li> <b>2020</b>: Análisis Fundamental – Universidad Adolfo Ibáñez.</li>
+									<li> <b>2020</b>: Análisis Financiero – Universidad Adolfo Ibáñez. </li>
+									<li> <b>2020</b>: Análisis Técnico – Universidad Adolfo Ibáñez.</li>
 									<li> <b>2020</b>: Módulos in Macroeconomics: HANK Models – Banco Central de Chile. </li>
-									<li> <b>2020</b>: Fondos de Inversión y Mutuos – Bolsa de Comercio de Santiago y Universidad Adolfo Ibáñez. </p>
+									<li> <b>2020</b>: Fondos de Inversión y Mutuos – Universidad Adolfo Ibáñez. </p>
 								</ul>
 
 
@@ -292,7 +291,7 @@
 
 								<h3 class="major">Lenguajes/Softwares</h3>
 								<ul>
-									<li> Apache Spark - Azure Synapse Analytics - Cloud Azure - Python (Jupyter) -  SQL (Oracle / Microsoft SQL Server) 
+									<li> Apache Spark - Azure Synapse Analytics - Cloud Azure - Python (Jupyter/Pycharm) -  SQL (Oracle / Microsoft SQL Server) 
 									- Qlik Sense
 									- STATGRAPHICS 
 									- Bloomberg
