--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
 								
 								
-								<h3>2. Mejoras de Click & Vote - Votación electronica con tecnología Blokchain</h3>
+								<h3>2. Mejoras de Click & Vote - Votación electronica con tecnología Blockchain</h3>
 								<span class="image main"><img src="images/12.jpg" alt="" /></span>
 								<p> Administración, actualización y despliegue de mejoras de Plataforma Click & Vote, la cual busca facilitar el proceso de votación
 									remota en juntas de accionistas, a través de una herramienta segura y
