--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 									<p> <b>Mis principales responsabilidades incluyen</b>: 
 
 															
-									<li> <b>Liderazgo y Gestión de Equipos</b>: Superviso y lidero los equipos encargados de implementar y desarrollar soluciones tecnológicas para Trading & Post-trading en la Corredora de Bolsa de Chil..</li>
+									<li> <b>Liderazgo y Gestión de Equipos</b>: Superviso y lidero los equipos encargados de implementar y desarrollar soluciones tecnológicas para Trading & Post-trading en la Corredora de Bolsa de Chile.</li>
 									<li> <b>Generación de Lineamientos Estratégicos y Tecnológicos</b>: Desarrollo y establecimiento de lineamientos estratégicos y tecnológicos para garantizar la eficiencia y la innovación en nuestras operaciones.</li>
 									<li> <b>Gestión del Portafolio de Proyectos</b>: Dirijo el portafolio de proyectos tecnológicos de alto impacto, asegurando su ejecución exitosa y alineación con los objetivos comerciales. </li>
 									<li><b>Transformación Digital</b>: Impulso procesos de transformación digital, buscando mejorar la eficiencia y la agilidad operativa a través de la implementación de tecnologías avanzadas. </li>
