--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 								
 								
 
-									<p><b>Desde marzo de 2023</b>, desempeño el cargo de <b>Director Asociado de Tecnología</b>. En esta posición, tengo la responsabilidad de supervisar y dirigir el ámbito tecnológico de la Corredora de Bolsa,  
+									<p><b>Desde marzo de 2023</b>, desempeño el cargo de <b>Subgerente TI Corredora de Bolsa BTG Pactual Chile (IT Associate Director - Sales & Trading)</b>. En esta posición, tengo la responsabilidad de supervisar y dirigir el ámbito tecnológico de la Corredora de Bolsa,  
 									área Sales & Trading.</p>
 
 
