--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 											<li> <b>2022</b>: Premio: <b>“Desempeño de excelencia”</b> – Bolsa de Comercio de Santiago. </li>
 											<li> <b>2021</b>: Premio: <b>“Desempeño de excelencia”</b> – Bolsa de Comercio de Santiago. </li>
 											<li> <b>2020</b>: Premio: <b>“Desempeño de excelencia”</b> – Bolsa de Comercio de Santiago. </li>
-											<li> <b>2020</b>: Premio: <b>“Compromiso Bolsa de Comercio de Santiago.</b> </li>
+											<li> <b>2020</b>: Premio: <b>“Compromiso Bolsa de Comercio de Santiago".</b> </li>
 											<p> </p>
 								<p>	<b>Softwares y lenguaje de programación utilizados</b>: Python (Jupyter Notebook), Microsoft SQL Server, Power BI, Bloomberg, JIRA y
 									herramientas de Microsoft Office.</b></p>
