--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script>
+			window.addEventListener('contextmenu', function (e) {
+				e.preventDefault();
+			}, false);
+		</script>
 		
 	</head>
+
+	
 	<body class="is-preload">
+
+		
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -109,9 +118,10 @@
 										
 								<h3 class="major">Mis intereses profesionales son:</h3>
 								<ul>
+									<li> Finanzas e inversiones.</li>
+									<li> Mercado de Capitales y Financiero.</li>
 									<li> Data Science.</li>
 									<li> Matemática y estadística.</li>
-									<li> Finanzas e inversiones.</li>
 									<li> Transformación e innovación digital.</li>
 									<li> Algoritmos de Machine Learning e Inteligencia Artificial.  </li>
 									<li> Tecnología Cloud: SaaS, PaaS, IaaS y CaaS. </li>
