--- a/index.html
+++ b/index.html
@@ -374,6 +374,8 @@
 
 								<p></p>
 
+								<h3>0. Inteligencia de Negocios y Mercados </h3>
+								<span class="image main"><img src="images/BI_2024.jpeg" alt="" /></span>
 
 								<h3>1. Creación y diseño de Brain Data - Bolsa de Santiago </h3>
 								<span class="image main"><img src="images/brain_data.jpg" alt="" /></span>
