--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
 								<p><b>Ingeniero Civil Industrial</b> titulado con distinción máxima de la <b>Universidad de Concepción</b> y <b>Magíster en Tecnologías de Información y Gestión</b> de la <b>Pontificia Universidad Católica de Chile (PUC)</b>.
 									Experiencia consolidada como Lead Manager de Innovación Digital y Product Owner Senior en el sector financiero.
 									
-									Ha liderado exitosamente el desarrollo y lanzamiento de productos tecnológicos complejos, optimizando procesos y generando un
-									 impacto significativo en los resultados del negocio. Su experiencia abarca la gestión de proyectos y productos ágiles, el diseño de soluciones digitales y el liderazgo de equipos multidisciplinarios,
+									He liderado el desarrollo y lanzamiento de productos tecnológicos complejos, optimizando procesos y generando un
+									 impacto significativo en los resultados del negocio. Mi experiencia abarca la gestión de proyectos y productos ágiles, el diseño de soluciones digitales y el liderazgo de equipos multidisciplinarios.
 									
 									</p>
 									 <p></p> 
