--- a/index.html
+++ b/index.html
@@ -3,13 +3,6 @@
 	Carlos Oliveros Rodrigues
 -->
 <html>
-	
-
-
-
-
-
-
 	<head>
 		<title>Carlos Oliveros - Web profesional</title>
 		<meta charset="utf-8" />
@@ -21,14 +14,10 @@
 				e.preventDefault();
 			}, false);
 		</script>
-		
 	</head>
 
 	
 	<body class="is-preload">
-
-		
-
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -353,29 +342,27 @@
 								</ul>
 
 
-								<h3 class="major">Lenguajes y Software</h3>
+								<h3 class="major">Habilidades Técnicas</h3>
 								<ul>
 								  <li>
-									<strong>Lenguajes de programación:</strong> Python (Jupyter/PyCharm), SQL (Oracle/Microsoft SQL Server), JavaScript, R, HTML + CSS, LaTeX.
+									<strong>Lenguajes de programación:</strong> Python (VScode /Jupyter), SQL (Oracle/Microsoft SQL Server), R, HTML + CSS, LaTeX.
 								  </li>
 								  <li>
-									<strong>Plataformas y frameworks:</strong> Streamlit, Apache Spark, Azure Synapse Analytics, Qlik Sense, Qlik-View, Tableau, Power BI.
+									<strong>Plataformas, librerías y frameworks:</strong> Streamlit, Apache Spark, Qlik Sense, Qlik-View, Tableau, Power BI.
 								  </li>
 								  <li>
-									<strong>Infraestructura y servicios en la nube:</strong> Azure Cloud, SharePoint.
+									<strong>Infraestructura y servicios en la nube:</strong> Azure Cloud, Azure Synapse Analytics, SharePoint.
 								  </li>
 								  <li>
-									<strong>Sistemas financieros:</strong> Sebra HT (Bolsa de Santiago), X-Stream (Bolsa Electrónica de Chile).
+									<strong>Sistemas financieros:</strong> Bloomberg, Sebra HT (Bolsa de Santiago), X-Stream (Bolsa Electrónica de Chile).
 								  </li>
 								  <li>
 									<strong>Herramientas de gestión y productividad:</strong> JIRA, Excel avanzado.
 								  </li>
 								  <li>
-									<strong>Protocolos de mensajería:</strong> FIX 4.4.
+									<strong>Protocolos de mensajería:</strong> FIX 4.4 (Financial Information Exchange).
 								  </li>
-								  <li>
-									<strong>Herramientas de análisis y datos:</strong> Bloomberg.
-								  </li>
+								  
 								</ul>
 								
 								<ul class="actions stacked">
